# videoviz-status-mongodb

./: export-to-requirements.cmd  main.py  publisher.py  pyproject.toml  requirements_all.txt
database/: db_manager.py
docker/: Dockerfile  docker-compose.yml
rabbitmq/: listener.py
